--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <td>from 200 uah.</td>
           </tr>
         </table>
-        <button type="button">online-booking</button>
+        <button type="button">ONLINE-BOOKING</button>
       </section>
       <!-- Description -->
       <section>
@@ -281,6 +281,12 @@
         <p>Every day from 9:00 to 22:00</p>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>&#169;Copyright 2020</p>
+      <ul>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">Youtube</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
