--- a/index.html
+++ b/index.html
@@ -4,64 +4,83 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BarberShop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="">
+    <!-- HEADER -->
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo-link link" href="">
           <img
+            class="logo-icon"
             src="./images/logo.svg"
             alt="logo company"
             width="69"
             height="55"
           />
         </a>
-        <ul>
-          <li>
-            <a href="">About</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="#about">About</a>
           </li>
-          <li>
-            <a href="">Services and prices</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="#services">Services and prices</a>
           </li>
-          <li>
-            <a href="">Barbers</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="#barbers">Barbers</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
-      <a href="tel:+380441111111">+38 044 111 11 11</a>
-      <button type="button">Online-booking</button>
+      <a class="contact-phone-number link" href="tel:+380441111111"
+        >+38 044 111 11 11</a
+      >
+      <button class="modal-btn modal-btn-theme-dark" type="button">
+        Online-booking
+      </button>
     </header>
     <main>
-      <!-- BarberShop -->
-      <section>
-        <div>
-          <ul>
-            <li><a href=""></a>Instagram</li>
-            <li><a href=""></a>Youtube</li>
+      <!-- HERO - BarberShop -->
+      <section class="hero">
+        <div class="hero-left-side">
+          <ul class="media-list list">
+            <li class="media-list-item">
+              <a class="media-list-link link" href="">Instagram</a>
+            </li>
+            <li class="media-list-item">
+              <a class="media-list-link link" href="">Youtube</a>
+            </li>
           </ul>
         </div>
-        <div>
-          <p>A hair salon for men in Kyiv</p>
-          <h1>BarberShop</h1>
-          <p>
+        <div class="hero-rigth-side">
+          <p class="suptitle suptitle-theme-dark">
+            A hair salon for men in Kyiv
+          </p>
+          <h1 class="main-title">BarberShop</h1>
+          <p class="section-description section-description-theme-dark">
             We are experts in trendy men’s haircuts. We work quickly, carefully
             and with style.
           </p>
-          <ul>
+          <ul class="switch list">
             <li>
-              <p>Back</p>
+              <p class="switch-back">Back</p>
             </li>
             <li>
-              <p>Forward</p>
+              <p class="switch-forward">Forward</p>
             </li>
           </ul>
         </div>
       </section>
-      <!-- About -->
-      <section class="about">
+      <!-- ABOUT -->
+      <section id="about" class="about">
         <img
           src="./images/about/about1.jpg"
           alt="The barber shaves the beard"
@@ -74,29 +93,37 @@
           width="270"
           height="455"
         />
-        <p>About</p>
-        <h2>Best Barbershop in your city</h2>
-        <p>
+        <p class="suptitle suptitle-theme-light">About</p>
+        <h2 class="section-title section-title-theme-light">
+          Best Barbershop in your city
+        </h2>
+        <p class="section-description section-description-theme-light">
           If you want to add more confidence to your image, you should
           definitely visit us.
         </p>
-        <p>
+        <p class="small-text-description section-description-theme-light">
           We are a team that never stops at what has been achieved and are
           thirsty for changes. And when you fall into the hands of our master,
           you will never be the same again. We are a team that is always "on the
           same wave" with clients. Therefore, we are always ready to improve
           everyone who comes to us!
         </p>
-        <button type="button">ONLINE-BOOKING</button>
+        <button class="modal-btn modal-btn-theme-light" type="button">
+          Online-booking
+        </button>
       </section>
-      <!-- Services and prices -->
-      <section>
-        <p>Spend your time with the best masters</p>
-        <h2>Services and prices</h2>
-        <table>
-          <tr>
-            <td>Men’s haircut</td>
-            <td>from 300 uah.</td>
+      <!-- SERVICES AND PRICES -->
+      <section id="services" class="services">
+        <p class="suptitle suptitle-theme-dark">
+          Spend your time with the best masters
+        </p>
+        <h2 class="section-title section-title-theme-dark">
+          Services and prices
+        </h2>
+        <table class="table-prices">
+          <tr class="table-prices-row">
+            <td class="table-prices-column">Men’s haircut</td>
+            <td class="table-prices-column">from 300 uah.</td>
           </tr>
           <tr>
             <td>Beard trim</td>
@@ -111,7 +138,7 @@
             <td>from 200 uah.</td>
           </tr>
         </table>
-        <table>
+        <table class="table-prices">
           <tr>
             <td>Trainee’s haircut</td>
             <td>from 50 uah.</td>
@@ -129,121 +156,166 @@
             <td>from 200 uah.</td>
           </tr>
         </table>
-        <button type="button">ONLINE-BOOKING</button>
+        <button class="modal-btn modal-btn-theme-dark" type="button">
+          Online-booking
+        </button>
       </section>
-      <!-- Description -->
-      <section>
-        <ul>
-          <li>
-            <p>600</p>
-            <p>Satisfied customers per day</p>
+      <!-- DESCRIPTION -->
+      <section class="description">
+        <ul class="list-description list">
+          <li class="list-description-item">
+            <p class="list-description-text-main">600</p>
+            <p class="list-description-text-secondary">
+              Satisfied customers per day
+            </p>
           </li>
-          <li>
-            <p>50</p>
-            <p>Awards for excellent service</p>
+          <li class="list-description-item">
+            <p class="list-description-text-main">50</p>
+            <p class="list-description-text-secondary">
+              Awards for excellent service
+            </p>
           </li>
-          <li>
-            <p>20</p>
-            <p>Kyiv’s best barbers</p>
+          <li class="list-description-item">
+            <p class="list-description-text-main">20</p>
+            <p class="list-description-text-secondary">Kyiv’s best barbers</p>
           </li>
-          <li>
-            <p>100</p>
-            <p>Gifts for regular customers</p>
+          <li class="list-description-item">
+            <p class="list-description-text-main">100</p>
+            <p class="list-description-text-secondary">
+              Gifts for regular customers
+            </p>
           </li>
         </ul>
-        <p>Old traditional school</p>
-        <h2>Why people come to us?</h2>
-        <p>
+        <p class="suptitle suptitle-theme-light">Old traditional school</p>
+        <h2 class="section-title section-title-theme-light">
+          Why people come to us?
+        </h2>
+        <p class="section-description section-description-theme-light">
           Only good things are said about us. But it's better to see and feel 1
           time than read 10 times.
         </p>
       </section>
-      <!-- Our barbers -->
-      <section>
-        <p>For true enjoyers of the atmosphere</p>
-        <h2>Our barbers</h2>
-        <ul>
-          <li>
+      <!-- OUR BARBERS -->
+      <section id="barbers" class="barbers">
+        <p class="suptitle suptitle-theme-light">
+          For true enjoyers of the atmosphere
+        </p>
+        <h2 class="section-title section-title-theme-light">Our barbers</h2>
+        <ul class="barbers-list list">
+          <li class="barbers-list-item">
             <img
+              class="barbers-list-img"
               src="./images/barbers/john_smith.jpg"
               alt="John Smith cuts a client's hair"
               width="370"
               height="346"
             />
-            <h3>John Smith</h3>
-            <p>Extreme Barber</p>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+            <h3 class="firstname-secondname-barber">John Smith</h3>
+            <p class="position-barber">Extreme Barber</p>
+            <ul class="social-barbers-list list">
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
             </ul>
           </li>
-          <li>
+          <li class="barbers-list-item">
             <img
+              class="barbers-list-img"
               src="./images/barbers/michele_doe.jpg"
               alt="Michele Doe cuts a client's hair"
               width="370"
               height="346"
             />
-            <h3>Michele Doe</h3>
-            <p>Extreme Barber</p>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+            <h3 class="firstname-secondname-barber">Michele Doe</h3>
+            <p class="position-barber">Extreme Barber</p>
+            <ul class="social-barbers-list list">
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
             </ul>
           </li>
-          <li>
+          <li class="barbers-list-item">
             <img
+              class="barbers-list-img"
               src="./images/barbers/alan_black.jpg"
               alt="Alan Black cuts a client's hair"
               width="370"
               height="346"
             />
-            <h3>Alan Black</h3>
-            <p>Extreme Barber</p>
-            <ul>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
-              <li><a href=""></a></li>
+            <h3 class="firstname-secondname-barber">Alan Black</h3>
+            <p class="position-barber">Extreme Barber</p>
+            <ul class="social-barbers-list list">
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
+              <li class="social-barbers-list-item">
+                <a class="social-barbers-list-link link" href=""></a>
+              </li>
             </ul>
           </li>
         </ul>
       </section>
-      <!-- Gallery of images-->
-      <section>
+      <!-- Gallery OF IMAGES -->
+      <section class="gallery">
         <h2 hidden>Gallery of images</h2>
-        <p>In Latin, "barba" means "beard"</p>
-        <ul>
-          <li>
+        <p class="suptitle suptitle-theme-light">
+          In Latin, "barba" means "beard"
+        </p>
+        <ul class="gallery list">
+          <li class="gallery-item">
             <img
+              class="gallery-img"
               src="./images/gallery/gallery1.jpg"
               alt="The barber cuts the client's hair"
               width="270"
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-item">
             <img
+              class="gallery-img"
               src="./images/gallery/gallery2.jpg"
               alt="Barber lathers a customer's beard"
               width="270"
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-item">
             <img
+              class="gallery-img"
               src="./images/gallery/gallery3.jpg"
               alt="The barber steams the client's face with a warm towel"
               width="270"
               height="360"
             />
           </li>
-          <li>
+          <li class="gallery-item">
             <img
+              class="gallery-img"
               src="./images/gallery/gallery4.jpg"
               alt="Barber makes crispy line up haircut"
               width="270"
@@ -252,40 +324,54 @@
           </li>
         </ul>
       </section>
-      <!-- Online-booking -->
-      <section>
-        <h2>Online-booking</h2>
+      <!-- ONLINE-BOOKING -->
+      <section class="online-booking">
+        <h2 class="section-title section-title-theme-dark">Online-booking</h2>
       </section>
-      <!-- Contacts -->
-      <section>
-        <h2>Contacts</h2>
-        <address>
-          <ul>
-            <li>
+      <!-- CONTACTS -->
+      <section id="contacts" class="contacts">
+        <h2 class="section-title section-title-theme-dark">Contacts</h2>
+        <address class="info">
+          <ul class="info-list list">
+            <li class="info-list-item">
               <a
+                class="info-list-link-address link"
                 href="https://maps.app.goo.gl/idGBWyZ7uoPgW45A7"
                 target="_blank"
                 rel="noopener noreferrer"
                 >st. Vasilkivska, 7A Kyiv, 08132</a
               >
             </li>
-            <li>
-              <a href="tel:+380441111111">+38 044 111 11 11</a>
+            <li class="info-list-item">
+              <a class="info-list-link-contact link" href="tel:+380441111111"
+                >+38 044 111 11 11</a
+              >
             </li>
-            <li>
-              <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            <li class="info-list-item">
+              <a
+                class="info-list-link-contact"
+                href="mailto:barbershop@email.com"
+                >barbershop@email.com</a
+              >
             </li>
           </ul>
         </address>
-        <h3>Working hours</h3>
-        <p>Every day from 9:00 to 22:00</p>
+        <h3 class="working-hour">Working hours</h3>
+        <p class="section-description section-description-theme-dark">
+          Every day from 9:00 to 22:00
+        </p>
       </section>
     </main>
-    <footer>
-      <p>&#169;Copyright 2020</p>
-      <ul>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Youtube</a></li>
+    <!-- FOOTER -->
+    <footer class="page-footer">
+      <p class="copyright">&#169;Copyright 2020</p>
+      <ul class="media-list list">
+        <li class="media-list-item">
+          <a class="media-list-link link" href="">Instagram</a>
+        </li>
+        <li class="media-list-item">
+          <a class="media-list-link link" href="">Youtube</a>
+        </li>
       </ul>
     </footer>
   </body>
